--- a/docs/36.md
+++ b/docs/36.md
@@ -569,7 +569,7 @@ cdef int[:, ::1] myslice = c_contig[::2]
 
 ```
 
-前一种情况是有效的，因为最后一个维度仍然是连续的，但是第一个维度不再“跟随”最后一个维度（意思是，它已经跨越了，但它不再是 C 或 Fortran 连续），因为它被切成了。
+前一种情况是有效的，因为最后一个维度仍然是连续的，但是第一个维度不再“跟随”最后一个维度（意思是，它已经跨越了，但它不再是 C 或 Fortran 连续），因为它被切片了。
 
 ## Memoryviews 和 GIL
 
@@ -581,24 +581,24 @@ cpdef int sum3d(int[:, :, :] arr) nogil:
 
 ```
 
-特别是，您不需要 GIL 进行内存视图索引，切片或转置。 Memoryviews 需要 GIL 用于复制方法（ [C 和 Fortran 连续拷贝](#view-copy-c-fortran) ），或者当 dtype 是对象并且读取或写入对象元素时。
+具体来说，内存视图的索引，切片或转置操作不需要 GIL。 内存视图的复制方法 需要 GIL，或者当 dtype 是对象并且在读取或写入对象元素时也需要GIL。
 
-## Memoryview 对象和 Cython 阵列
+## Memoryview 对象和 Cython 数组
 
-这些类型化的内存视图可以转换为 Python 内存视图对象（ &lt;cite&gt;cython.view.memoryview&lt;/cite&gt; ）。这些 Python 对象可以像原始内存视图一样进行索引，可切片和转换。它们也可以随时转换回 Cython 空间的内存视图。
+这些类型化的内存视图可以转换为 Python 内存视图对象（ *cython.view.memoryview* ）。这些 Python 对象可以像原始内存视图一样进行索引、切片和转置。它们也可以随时转换回 Cython 空间的内存视图。
 
 它们具有以下属性：
 
-> *   `shape`：每个维度的大小，作为元组。
+> *   `shape`：用元组来表示每个维度的大小，。
 > *   `strides`：沿每个维度跨步，以字节为单位。
 > *   `suboffsets`
 > *   `ndim`：维数。
-> *   `size`：视图中的项目总数（形状的乘积）。
+> *   `size`：视图中的总项数（形状的乘积）。
 > *   `itemsize`：视图中项目的大小（以字节为单位）。
-> *   `nbytes`：等于`size`乘以`itemsize`。
+> *   `nbytes`：等于 `size` 乘以 `itemsize`。
 > *   `base`
 
-当然还有前面提到的`T`属性（ [Transposing](#view-transposing)）。这些属性与 [NumPy](https://docs.scipy.org/doc/numpy/reference/arrays.ndarray.html#memory-layout) 具有相同的语义。例如，要检索原始对象：
+当然还有前面提到的`T`属性。这些属性与 [NumPy](https://docs.scipy.org/doc/numpy/reference/arrays.ndarray.html#memory-layout) 具有相同的语义。例如，要检索原始对象：
 
 ```py
 import numpy
@@ -618,11 +618,11 @@ print(a.base)
 
 ```
 
-请注意，此示例返回从中获取视图的原始对象，并在此期间重新查看视图。
+请注意，此示例返回从中获取视图的原始对象，并在此期间重新切片视图。
 
 ## Cython 数组
 
-每当复制 Cython 内存视图时（使用任何&lt;cite&gt;副本&lt;/cite&gt;或 &lt;cite&gt;copy_fortran&lt;/cite&gt; 方法），您将获得新创建的`cython.view.array`对象的新内存视图片段。此数组也可以手动使用，并自动分配数据块。稍后可以将其分配给 C 或 Fortran 连续切片（或跨步切片）。它可以像：
+每当复制 Cython 内存视图时（使用任*copy* 或 *copy_fortran* 方法），您将获得新创建的 `cython.view.array` 对象的新内存视图片段。此数组也可以手动使用，并自动分配数据块。稍后可以将其分配给 C 或 Fortran 连续切片（或跨步切片）。它可以像：
 
 ```py
 from cython cimport view
@@ -632,7 +632,7 @@ cdef int[:, :] my_slice = my_array
 
 ```
 
-它还需要一个可选参数&lt;cite&gt;模式&lt;/cite&gt;（'c'或'fortran'）和一个布尔 &lt;cite&gt;allocate_buffer&lt;/cite&gt; ，它指示缓冲区是否应该在超出范围时分配和释放：
+它还需要一个可选参数 *模式*（ 'c' 或 'fortran' ）和一个布尔 *allocate_buffer* ，它指示缓冲区是否应该在超出范围时分配和释放：
 
 ```py
 cdef view.array my_array = view.array(..., mode="fortran", allocate_buffer=False)
@@ -651,7 +651,7 @@ cdef view.array my_array = <int[:, :]> my_c_array
 
 ```
 
-当然，您也可以立即将 cython.view.array 分配给类型化的 memoryview 切片。可以将 C 数组直接分配给 memoryview 切片：
+当然，您也可以立即将 cython.view.array 赋值给类型化的 memoryview 切片。可以将 C 数组直接分配给 memoryview 切片：
 
 ```py
 cdef int[:, ::1] myslice = my_2d_c_array
@@ -660,11 +660,11 @@ cdef int[:, ::1] myslice = my_2d_c_array
 
 这些数组可以像 Python 内存对象一样从 Python 空间进行索引和切片，并且具有与 memoryview 对象相同的属性。
 
-## Python 数组模块
+## CPython 数组模块
 
-`cython.view.array`的替代方案是 Python 标准库中的`array`模块。在 Python 3 中，`array.array`类型本身支持缓冲区接口，因此内存视图无需额外设置即可在其上工作。
+`cython.view.array` 的替代方案是 Python 标准库中的 `array` 模块。在 Python 3 中，`array.array` 类型本身支持缓冲区接口，因此内存视图无需额外设置即可在其上工作。
 
-但是，从 Cython 0.17 开始，可以在 Python 2 中使用这些数组作为缓冲提供程序。这是通过显式 cimporting `cpython.array`模块完成的，如下所示：
+从 Cython 0.17 开始，也可以在 Python 2 中使用这些数组作为缓冲提供者。这是通过显式 cimporting `cpython.array`模块完成的，如下所示：
 
 ```py
 cimport cpython.array
@@ -692,7 +692,7 @@ def sum_array(array.array[int] arr):  # using old buffer syntax
 
 ```
 
-## 强制到 NumPy
+## 强制转换为 NumPy
 
 Memoryview（和数组）对象可以强制转换为 NumPy ndarray，而无需复制数据。你可以，例如做：
 
@@ -706,9 +706,9 @@ numpy_array = np.asarray(<np.int32_t[:10, :10]> my_pointer)
 
 当然，您不限于使用 NumPy 的类型（例如此处的`np.int32_t`），您可以使用任何可用的类型。
 
-## 无切片
+## `None` 切片
 
-尽管 memoryview 切片不是对象，但它们可以设置为 None，并且可以检查它们是否为 None：
+尽管 Memoryview 切片不是对象，但它们可以设置为 None，并且可以检查它们是否为 None：
 
 ```py
 def func(double[:] myarray = None):
@@ -728,10 +728,10 @@ def func(double[:] myarray not None):
 
 ## 通过指针从 C 函数传递数据
 
-由于在 C 中使用指针是无处不在的，这里我们给出一个快速示例，说明如何调用其参数包含指针的 C 函数。假设您想要使用 NumPy 管理数组（分配和释放）（它也可以是 Python 数组，或者任何支持缓冲区接口的数组），但是您希望使用`C_func_file.c`中实现的外部 C 函数对此数组执行计算]：
+由于在 C 中使用指针是无处不在的，这里我们给出一个快速示例，说明如何调用其参数包含指针的 C 函数。假设您想要使用 NumPy 管理数组（分配和释放）（它也可以是 Python 数组，或者任何支持缓冲区接口的数组），但是您希望使用 `C_func_file.c` 中实现的外部 C 函数对此数组执行计算]：
 
 
-```py
+```C
 #include "C_func_file.h"
 
 void multiply_by_10_in_C(double arr[], unsigned int n)
@@ -745,10 +745,10 @@ void multiply_by_10_in_C(double arr[], unsigned int n)
 ```
 
 
-此文件附带一个名为`C_func_file.h`的头文件，其中包含：
+此文件附带一个名为 `C_func_file.h` 的头文件，其中包含：
 
 
-```py
+```C
 #ifndef C_FUNC_FILE_H
 #define C_FUNC_FILE_H
 
@@ -759,7 +759,7 @@ void multiply_by_10_in_C(double arr[], unsigned int n);
 ```
 
 
-其中`arr`指向数组，`n`是其大小。
+其中 `arr` 指向数组，`n` 是其大小。
 
 您可以通过以下方式在 Cython 文件中调用该函数：
 
@@ -797,10 +797,16 @@ print(multiply_by_10(b))  # but our function still works as expected.
 
 有几件事需要注意:
 
-*   `::1`请求 C 连续视图，如果缓冲区不是 C 连续则失败。参见 [C 和 Fortran 连续记忆视图](#c-and-fortran-contiguous-memoryviews) 。
-*   `&arr_memview[0]`可以理解为'存储器视图的第一个元素的地址'。对于连续数组，这相当于平坦内存缓冲区的起始地址。
-*   `arr_memview.shape[0]`可能被`arr_memview.size`，`arr.shape[0]`或`arr.size`取代。但`arr_memview.shape[0]`更有效，因为它不需要任何 Python 交互。
-*   如果传递的数组是连续的，`multiply_by_10`将就地执行计算，如果`arr`不连续，它将返回一个新的 numpy 数组。
-*   如果您使用的是 Python 数组而不是 numpy 数组，则无需检查数据是否连续存储，因为总是如此。参见 [使用 Python 数组](../tutorial/array.html#array-array) 。
+*   `::1` 请求一个 C 连续视图，如果缓冲区不是 C 连续的则失败。
+*   `&arr_memview[0]` 可以理解为'内存视图的第一个元素的地址'。对于连续数组，这相当于平面内存缓冲区的起始地址。
+*   `arr_memview.shape[0]` 可以被 `arr_memview.size` 、`arr.shape[0]` 或 `arr.size` 取代。但 `arr_memview.shape[0]` 更有效，因为它不需要任何 Python 交互。
+*   如果传递的数组是连续的，`multiply_by_10` 将原位执行计算，如果 `arr` 不连续，它将返回一个新的 numpy 数组。
+*   如果您使用的是 Python 数组而不是 numpy 数组，则无需检查数据是否连续存储，因为总是如此（译者注：Python数组总是连续的）。参见 [使用 Python 数组](../tutorial/array.html#array-array) 。
 
-这样，您可以调用类似于普通 Python 函数的 C 函数，并将所有内存管理和清理留给 NumPy 数组和 Python 的对象处理。有关如何在 C 文件中编译和调用函数的详细信息，请参阅 [使用 C 库](../tutorial/clibraries.html#using-c-libraries) 。
+这样，您可以调用类似于普通 Python 函数的 C 函数，并将所有内存管理和清理留给 NumPy 数组和 Python 的对象处理。有关如何在 C 文件中编译和调用函数的详细信息，请参阅 [使用 C 库](docs/10.md) 。
+
+## 性能：禁用初始化检查
+
+每当内存视图被访问的时候，Cython都会增加一个被访问对象是否已经被初始化的检查。
+
+如果你追求高性能，你可以通过将编译器指令 `initializedcheck` 设置为 `False` 来禁用这些检查。更多关于这个指令的信息可以查看 [编译器指令](docs/29.md#编译器指令)。
