--- a/docs/41.md
+++ b/docs/41.md
@@ -8,21 +8,24 @@
 
 请注意，此功能是实验性的。
 
-## 使用 distutils 的用法示例
+## 使用 setuptools 的用法示例
 
 你首先需要安装 Pythran。有关更多信息，请参见其[文档](https://pythran.readthedocs.io/)。
 
 然后，只需在 Python 文件的顶部添加一个`cython: np_pythran=True`指令，该指令需要使用 Pythran numpy 支持进行编译。
 
-以下是使用 distutils 的简单`setup.py`文件的示例：
+以下是使用 setuptools 的简单`setup.py`文件的示例：
 
 ```py
-from distutils.core import setup
+from setuptools import setup
 from Cython.Build import cythonize
+import numpy
+import pythran
 
 setup(
     name = "My hello app",
-    ext_modules = cythonize('hello_pythran.pyx')
+    ext_modules = cythonize('hello_pythran.pyx'),
+    include_dirs = [numpy.get_include(), pythran.get_include()]
 )
 
 ```
