--- a/docs/45.md
+++ b/docs/45.md
@@ -1,4 +1,4 @@
-# 故障排除
+# 故障排查
 
 > 原文: [https://cython.readthedocs.io/en/latest/src/userguide/troubleshooting.html](https://cython.readthedocs.io/en/latest/src/userguide/troubleshooting.html)
 
