--- a/docs/46.md
+++ b/docs/46.md
@@ -10,27 +10,27 @@
 
 但是可以使用[纯Python风格](docs/17.md)来为编译提供类型注释，包括用Python PEP-484的语法来做类型提示。
 
-对于完全不需要和外部C库互动的场景来说，这也是你给代码添加类型的推荐做法，因为坚持 .py 文件和正常的Python语法可以保留整个 调试、静态分析、格式调整、性能测试等对你的软件开发有用的Python代码工具，这些工厂通常处理不了 .pyx 文件的语法。
+对于完全不需要和外部C库互动的场景来说，这也是你给代码添加类型的推荐做法，因为坚持 .py 文件和正常的Python语法可以保留整个 调试、静态分析、格式调整、性能测试等对你的软件开发有用的Python代码工具，这些工具通常处理不了 .pyx 文件的语法。
 
----
+<hr>
 
 ### Cython可以为类生成C代码吗？
 
-**回答**: 普通的类会变成完整的Python类，除此之外Cython还能生成C的类（类数据以一些限制作为代价用一个高效的C解决存储）
+**回答**: 普通的类会变成完整的Python类，除此之外Cython还能生成C的类（类数据以一些限制作为代价用一个高效的C结构存储）
 
----
+<hr>
 
 ### 我可以在C当中调用Python代码吗？
 
 **回答**: 可以，很简单。看Cython源代码库中[这里](https://github.com/cython/cython/tree/master/Demos/callback)的案例。
 
----
+<hr>
 
 ### 如何用Cython和Numpy 数组连接？
 
 **回答**: 看[这里](docs/40.md)。
 
----
+<hr>
 
 ### 我应该如何带着子包编译Cython？
 
@@ -38,14 +38,496 @@
 
 一部分原因是编译的时候会解析完整的名称。移动 `.so` 文件或者在Cython编译和Python运行调用之间增加 `__init__` 文件可能会使得 cimports 和 imports解析结果不同。这一步失败的话可能会产生类似于 .pxd文件找不到 这样的错误 或者是 `'module' object has no attribute '__pyx_capi__'`。
 
----
+<hr>
 
 ### 我应该如何加快C语言编译？
 
 **回答**: 特别是对于较大的模块来说，Cython生成的代码可以花掉C编译器不少的时间来优化。出于生产目的构建一般能接受，但是在开发的时候，这就很讨厌了。
 
-关掉代码优化可以极大的加快C编译器运行的时间，比如在Linux或者MacOS上设置环境变量 `CFLAGS="-O0 -ggdb"` -- 还能启用完整的条是标识符查看更好的崩溃报告。对于Windows上的MSVC，你可以传一个 `/0d` 的选项来禁用一切优化。
+关掉代码优化可以极大的加快C编译器运行的时间，比如在Linux或者MacOS上设置环境变量 `CFLAGS="-O0 -ggdb"` -- 还能启用完整的调试标识符查看更好的崩溃报告。对于Windows上的MSVC，你可以传一个 `/0d` 的选项来禁用一切优化。
 
----
+<hr>
 
-（译者注：未完待续）
+### 我应该如何减小二进制模块的大小？
+
+**回答**: Python的distutils构建通常会在扩展模块中包含调试标识符。比如，对gcc来说默认是 `-g2`。禁用标识符（gcc的话，是`CFLAGS=-g0`)或者设置为能够输出足够回溯信息或者崩溃报告(gcc的话，是`CFLAGS=-g1`)的最低限度，可以显而易见的减小二进制文件的大小。
+
+<hr>
+
+### 对Unicode的支持如何？
+
+**回答**: 对Unicode的支持和CPython一样好，除此之外会区分Python `str`(Python2.7的 `bytes` )和 `Unicode`(总是Unicode文本)。注意：没有和Unicode字符串对应的C类型，但是Cython可以在Unicode文本和编码的C/C ++文本（ `char*` / `std::string`）之间自动转换（编码/解码）
+
+<hr>
+
+## 我应该如何...?
+
+### 我应该如何序列化 cdef 类？
+
+**回答**: 看这个[文档](docs/25.md#控制对象序列化pickling)。
+
+<hr>
+
+### 我应该如何帮助Cython找到numpy 头文件？
+
+**回答**: 如果你看到这样的错误信息：
+
+```python
+error: numpy/arrayobject.h: No such file or directory
+error: numpy/ufuncobject.h: No such file or directory
+```
+
+你应该修改你的 setup.py 文件来加入 numpy的 include 目录，像这样:
+
+```python
+import numpy
+...
+setup(
+    ...
+    ext_modules = [Extension(..., include_dirs=[numpy.get_include()])]
+)
+```
+
+<hr>
+
+### 我应该如何声明一个C数值或者整数类型？
+
+**回答**: 在大多数情况下，你并不需要。对于在 `stdint.h` 中声明的类型，直接从Cython自带的 `libc.stdint` 中 `cimport`。 
+
+```python
+from libc.stdint cimport uint32_t, int64_t
+cdef int64_t i = 5
+```
+
+对于非标准类型，给Cython提供一个足够把它们映射到一个相关的标准C类型的 `ctypedef` 声明就足够了。比如：
+
+```python
+cdef extern from "someheader.h":
+    ctypedef unsigned long MySpecialCInt_t
+
+cdef MySpecialCInt_t i
+```
+
+请确保你在代码中使用原来的 C 类型名称(typedef)，而不是你为Cython选择的对应替代类型。
+
+在C编译时期类型的具体大小并不重要，因为Cython能生成自动大小检测代码（在C编译器求值）。但是无论如何，当你在算数代码中混杂了许多不同类型的时候，Cython必须知道正确的符号和大概的长度来推理表达式的合适的结果类型。因此，当像上面这样使用 `ctypedef` 时，尝试带一个恰当的预期C类型。既然最大的类型在混杂类型的算术计算中获胜，通常来说，这个类型比C编译器最终为系统决定的类型大小更大不构成问题。在最差情况下，如果你选的替代类型比真正的C类型要大的多（比如 `long long` 而不是 `int` ），你可能会得到一个稍慢的代码。但是，如果这个类型定义的太小，而Cython认为这个和它一起使用的类型更小，Cython可能会给表达式推理出错误的类型，因此可能会产生错误的强制转换代码。在这种情况下，收到或者没收到C编译器的警告都是可能的。
+
+还需要注意的是Cython会认为很大的整型字面量（大于 有符号的32bit）在C代码中使用不安全并可能因此使用Python对象来包装这些。通过加一个C后缀、比如 `LL` 或者 `UL` ,你可以确保一个大的字面量是一个安全的C字面量。注意，单个的 `L` 在Python2代码中不被认为是C后缀。
+
+<hr>
+
+### 我如何声明布尔类型的对象？
+
+**回答**: 这取决于你希望使用的是 C99/C ++的 `bool`, 还是Python的 `bool`。在过去的代码中，Cython总是默认使用Python的 `bool` 类型，因此导致用户在包裹C ++代码时毫不怀疑的使用 `bool` 类型引发了许多难以调试的问题。因此我们决定要求用户显式的做出这个决定 - 你可以引用任意一个你喜欢的。
+
+* 对于Python类型，`from cpython cimport bool`。
+* 对于C ++类型，`from libcpp cimport bool`。
+
+注意这里还有一个类型叫 `bint` -- 本质上是一 C `int` 但是会在Python的bool之间自动转换，比如 `cdef object x = <bint>some_c_integer_value` 会赋值 `True` 或者 `False`。
+
+<hr>
+
+### 我应该如何使用 `const` ?
+
+**回答**: 在代码和声明用就行。
+
+**译者回答**: 其实并不是随意用，根据Cython文档，对于const指针，只建议在函数参数和返回值中使用，对应于与外部C代码互动时满足对应的要求（因为在其他地方，Cython可能需要对声明和赋值分别生成代码）
+
+如果是const常量，在传值的情况下没有这个必要。
+
+<hr>
+
+### 我应该如何对内置函数比如 `len()` 使用C类型 `char*` ?
+
+**回答**: Cython将 `len(char*)` 映射为 `strlen()`，代表着计算直到第一个0字节的字符数量。类似的，`(char*).decode(...)` 会被优化为C-API调用，用这个来切片 `char*` 值会跳过计算长度的步骤。
+
+看[字符串教程](docs/15.md)。
+
+对于在`char*`上的其他Python操作，生成的代码可能不够高效，因为也许必须要创建一个临时对象。如果你在你的代码中发现了这个问题，并且认为Cython可以做的更好，欢迎在邮件列表中说明。
+
+<hr>
+
+### 我应该写一个继承Python内置类型（比如list列表）的cdef类？
+
+**回答**: 你可以把这个类型写成你cdef类的父类。
+
+唯一例外是，字节类型（Python2中是 `str`）和元组 -- 只能被Python类子类化（cdef类不能）。这目前被认为是一个BUG。即使如此，你可以安全的子类化 `unicode` 和 `list`。
+
+<hr>
+
+### 我应该如何在Cython代码中引发一个异常、并对调用栈上的高层CPython代码可见？
+**回答**: 如果你的cdef或者cpdef的函数或者方法没有声明返回类型（在CPython代码中很正常），那么你不用额外做什么就可以得到异常。
+
+如果你的cdef或者cpdef函数声明了返回类型，可以查看[错误返回值文档](docs/24.md#错误返回值)。
+
+<hr>
+
+### 我应该如何声明全局变量？
+
+**回答**: 
+
+```Python
+global variable
+```
+
+<hr>
+
+### 我应该如何给全局变量赋值？
+
+**回答**: 你需要在尝试赋值前像上面这样声明全局变量。当你写这样代码时这经常会发生:
+
+```python
+cdef int *data
+
+def foo(n):
+    data = malloc(n * sizeof(int))
+```
+
+这会引发一个 “无法将 `'int *'` 转换为Python对象“ 的错误。这是因为在Python中，赋值会声明一个局部变量。相反，如果你这么写：
+
+```python
+cdef int *data
+
+def foo(n):
+    global data
+    data = malloc(n * sizeof(int))
+```
+
+更详细的信息请看这里: [http://docs.python.org/tutorial/classes.html#python-scopes-and-namespaces](http://docs.python.org/tutorial/classes.html#python-scopes-and-namespaces)
+
+<hr>
+
+### 我应该如何像纯C代码一样创建对象或者对局部创建的对象使用运算符。
+
+**回答**: 对于 `__init__` 和 `__getitm__` 这样的方法，Python的调用习惯对所有对象都是强制和一致的，所以Cython无法对它们提供大的提速。
+
+初始化一个扩展类型，的最快的方法是实际上使用普通的Python的调用类型 `__new__()` 方法的习惯。
+
+```python
+cdef class ExampleClass:
+    cdef int _value
+    def __init__(self):
+        # calling "__new__()" will not call "__init__()" !
+        raise TypeError("This class cannot be instantiated from Python")
+
+cdef ExampleClass _factory():
+    cdef ExampleClass instance = ExampleClass.__new__(ExampleClass)
+    instance._value = 1
+    return instance
+```
+
+注意: 这和普通Python代码有类似的限制：它不会调用 `__init__` 方法，因此也会快一点。另外，所有Python类成员会初始化为None，你必须自己负责将C成员初始化。要么通过调用 `__cinit__` 方法要么使用上面的工厂函数都是好办法。
+
+<hr>
+
+### 我应该如何在Cython模块中实现一个单类方法？
+
+**回答**: 在Cython3.0中，Cython定义的方法会默认绑定。这意味着下面的代码可以生效：
+
+```python
+#!python
+import cython_module
+
+class A(object):
+    method = cython_module.optimized_method
+```
+
+<hr>
+
+### 我应该如何给Cython传可能带0字节的字符串缓冲区？
+
+**回答**: 看[字符串教程](docs/15.md)。
+
+你需要使用Python字节字符串对象或者是一个 char* 或者对应长度的变量对。
+
+正常的从char*到Python字节字符串的转换方法是：
+
+```python
+#!python
+cdef char* s = "a normal C byte string"
+cdef bytes a_python_byte_string = s
+```
+
+但是这对于包含0字节的C字符串无效，因为0字节是C语言中标准的终结字符串的方法。因此上面的方法会把字符串截断到第一个0字节。在这种情况下，要正确处理，你需要声明你想要转换的字符串的总长度。
+
+```python
+cdef char* s = "an unusual \0 containing C byte string"
+a_python_byte_string = s[:21]    #  take the first 21 bytes of the string, including the \0 byte
+```
+
+注意：这无法处理声明的切片长度对于真实C字符串的长度更长的情况。如果 `char*` 分配的内存（比切片长度）短的话代码会崩溃。
+
+还支持将C字符串高效地解码切片为一个PythonUnicode字符串。
+
+```python
+# -*- coding: ISO8859-15
+cdef char* s = "a UTF-8 encoded C string with fünny chäräctörs"
+cdef Py_ssize_t byte_length = 46
+
+a_python_unicode_string = s[:byte_length].decode('ISO8859-15')
+```
+
+<hr>
+
+### 我应该如何把Python 字符串(string) 参数传递给C库？
+
+**回答**: 看[字符串教程](docs/15.md)。
+
+这取决于字符串的语义。假设你有这么一个C函数：
+
+```python
+cdef extern from "something.h":
+    cdef int c_handle_data(char* data, int length)
+```
+
+对于**二进制数据**，你可以在API层面要求字节字符串，所以以下代码是有效的：
+
+```python
+def work_with_binary_data(bytes binary_data):
+    c_handle_data(binary_data, len(binary_data))
+```
+
+如果用户传递的不是字节字符串，这段代码会引发错误(带和你的使用场景可能有关、也可能无关的消息)。
+
+对于**文本数据**，你必须处理Unicode数据输入。你应该做什么（具体的处理）取决于你的C函数能接收什么。比如，当它要求UTF-8编码的字节序列时，可以：
+
+```python
+def work_with_text_data(text):
+    if not isinstance(text, unicode):
+        raise ValueError("requires text input, got %s" % type(text))
+    utf8_data = text.encode('UTF-8')
+    c_handle_data( utf8_data, len(utf8_data) )
+```
+
+注意：这也接收Python Unicode类型的子类。将 "text" 参数标记为 "unicode" 在这种情况下没用(will not cover this case)。
+
+<hr>
+
+### 我应该如何使用可变参数？
+
+**回答**: 对于正常的函数，像在Python中一样，使用 `*args` 即可。
+
+对于C函数，没法器过年送给你的做到，但是你可以使用 C语言的 `va_args` 机制。
+
+```python
+cdef extern from "stdarg.h":
+    ctypedef struct va_list:
+        pass
+    ctypedef struct fake_type:
+        pass
+    void va_start(va_list, void* arg)
+    void* va_arg(va_list, fake_type)
+    void va_end(va_list)
+    fake_type int_type "int"
+
+cdef int foo(int n, ...):
+    print "starting"
+    cdef va_list args
+    va_start(args, <void*>n)
+    while n != 0:
+        print n
+        n = <int>va_arg(args, int_type)
+    va_end(args)
+    print "done"
+
+def call_foo():
+    foo(1, 2, 3, 0)
+    foo(1, 2, 0)
+```
+
+<hr>
+
+### 我应该如何用Cython写一个给Python程序用的独立二进制库？
+
+**回答**: 你可能想要这么做：
+
+使用 `--embed` 选项，这个选项可以在生成的C代码中内嵌一份Python的解释器的副本。你需要把 `foobar` 改为你的脚本的名称，并且设置合适的 `PYVERSION`。
+
+更多细节可以看 [如何在C/C ++程序中内嵌Cython模块](https://cython.readthedocs.io/en/latest/src/tutorial/embedding.html)（译者注：该文档还未翻译）。
+
+<hr>
+
+### 我应该如何包装使用 Restrict 限定符的C代码？（Restrict Qualifier）
+
+**回答**: 目前还没有办法。Cython并不理解 Restrict 限定符。但是你可以绕过它。
+
+看下面这个例子：
+
+#### slurp.h
+
+```c
+#include <sys/types.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <regex.h>
+#include <Python.h>
+
+int th_match(char *, char *);
+```
+
+#### cslurp.c
+
+```c
+#include "slurp.h"
+
+int th_match(char *string, char *pattern) {
+  int status;
+  regex_t re;
+  if(regcomp(&re, pattern, REG_EXTENDED|REG_NOSUB) != 0) { return 0; }
+  status = regexec(&re, string, (size_t)0, NULL, 0);
+  regfree(&re);
+  if(status != 0)
+    return 0;
+  return 1;
+}
+```
+
+#### slurp.pyx
+
+```python
+cdef extern from "slurp.h":
+    int th_match(char *st, char *pt)
+
+class Slurp:
+    '''
+    This is a simple, but optimized PEG (Parser Expression Group) parser.
+    It will parse through anything you hand it provided what you hand it
+    has a readline() method.
+
+    Example:
+        import sys
+        from thci.ext import slurp
+        o = slurp.Slurp()
+        o.register_trigger('^root:.*:.*:.*:.*$', sys.stdout.write)
+        o.process(open('/etc/passwd', 'r'))
+    '''
+
+    def __init__(self):
+        ''' __init__(self) '''
+        self.map = {}
+        self.idx = 0
+
+    def register_trigger(self, patt=None, cback=None, args=None):
+        ''' register_trigger(self, patt=None, cback=None, args=None) '''
+        if patt == None or cback == None:
+            return False
+        if args == None: args = False
+        self.map[self.idx] = (patt, cback, args)
+        self.idx += 0
+        return True
+
+    def process(self, fp=None):
+        ''' process(self, fp=None) '''
+        if fp == None:
+            return False
+        while True:
+            buf = fp.readline()
+            if not buf: break
+            for patt, cback, args in self.map.values():
+                if th_match(buf, patt) == True:
+                    if args == False:
+                        cback(buf.strip())
+                    else:
+                        cback(buf.strip(), args)
+```
+
+通过允许C编译器在C之间处理问题，这避免了使用 Restrict 限定符的问题（对于声明在 FreeBSD 7.X版本以上 Regex.h 的函数是需要的 ）。即使用 "const技巧“，Cython对此的支持都无法做到表现正常（至少0.12版本是）。下面的命令可以用上面的代码生成对应的编译模块。
+
+```sh
+cython -o slurp.c slurp.pyx
+cc -shared -I/usr/include -I./ -I/usr/local/include/python2.5 -L/usr/local/lib -lpthread -lpython2.5 cslurp.c slurp.c -o slurp.so
+```
+
+通过把 cslurp.c 文件加入到扩展模块的待编译文件中，你也可以使用 distutils工具（译者注：现在改用setuptools了）。
+
+<hr>
+
+### 我应该如何从 C(.h) 或者 C ++(.hpp)头文件出发自动生成Cython定义？
+
+**回答**: 有些人写了脚本来解析头文件并自动生成Cython绑定。
+
+**autowrap**
+
+autowrap 可以基于注解的的Cython pxd文件，自动生成包装 C ++库的Python扩展模块。目前的功能支持包装 模板类、枚举、自由函数、静态方法、以及Python数据类型与许多STL容器的之间的转换器（双向皆可）。最后还得提一句，手写的Cython代码也可以被吸收为包装代码。
+
+[http://github.com/uweschmitt/autowrap](http://github.com/uweschmitt/autowrap)
+
+**python-autopxd**
+
+从C头文件自动生成pxd。它使用 [pycparser](https://github.com/eliben/pycparser) 来解析定义。所以除Python依赖之外，唯一的要求就是在 PATH 中有C预处理器。
+
+[https://github.com/gabrieldemarmiesse/python-autopxd2](https://github.com/gabrieldemarmiesse/python-autopxd2) (这是一个Python-autopxd 的 folk，支持最近的Python版本).
+
+[https://github.com/tarruda/python-autopxd](https://github.com/tarruda/python-autopxd) (原来的版本)
+
+<hr>
+
+### 如何运行Cython代码(pyx文件)中的doctests?
+
+**回答**: Cython在模块中生成一个 `__test__` 字典，包含了所有Python可见函数的docsstrings以及像doctests这样的类（比如，包含 `>>>`）。这个doctest必须正确的使用这一点并运行doctest。
+
+这个模块（我们叫它 "cydoctest"）提供了 兼容Cython的 解决方法。
+
+```python
+#!python
+"""
+Cython-compatible wrapper for doctest.testmod().
+
+Usage example, assuming a Cython module mymod.pyx is compiled.
+This is run from the command line, passing a command to Python:
+python -c "import cydoctest, mymod; cydoctest.testmod(mymod)"
+
+(This still won't let a Cython module run its own doctests
+when called with "python mymod.py", but it's pretty close.
+Further options can be passed to testmod() as desired, e.g.
+verbose=True.)
+"""
+
+import doctest
+import inspect
+
+def _from_module(module, object):
+    """
+    Return true if the given object is defined in the given module.
+    """
+    if module is None:
+        return True
+    elif inspect.getmodule(object) is not None:
+        return module is inspect.getmodule(object)
+    elif inspect.isfunction(object):
+        return module.__dict__ is object.func_globals
+    elif inspect.isclass(object):
+        return module.__name__ == object.__module__
+    elif hasattr(object, '__module__'):
+        return module.__name__ == object.__module__
+    elif isinstance(object, property):
+        return True # [XX] no way not be sure.
+    else:
+        raise ValueError("object must be a class or function")
+
+def fix_module_doctest(module):
+    """
+    Extract docstrings from cython functions, that would be skipped by doctest
+    otherwise.
+    """
+    module.__test__ = {}
+    for name in dir(module):
+       value = getattr(module, name)
+       if inspect.isbuiltin(value) and isinstance(value.__doc__, str) and _from_module(module, value):
+           module.__test__[name] = value.__doc__
+
+def testmod(m=None, *args, **kwargs):
+    """
+    Fix a Cython module's doctests, then call doctest.testmod()
+
+    All other arguments are passed directly to doctest.testmod().
+    """
+    fix_module_doctest(m)
+    doctest.testmod(m, *args, **kwargs)
+```
+
+<hr>
+
+### 在OSX上安装时，我应该如何绕过 `-Wno-long-double error` ?
+
+**回答**: 
