--- a/docs/46.md
+++ b/docs/46.md
@@ -307,7 +307,7 @@ def work_with_text_data(text):
 
 **回答**: 对于正常的函数，像在Python中一样，使用 `*args` 即可。
 
-对于C函数，没法器过年送给你的做到，但是你可以使用 C语言的 `va_args` 机制。
+对于C函数，没法轻松地做到，但是你可以使用 C语言的 `va_args` 机制。
 
 ```python
 cdef extern from "stdarg.h":
@@ -530,4 +530,295 @@ def testmod(m=None, *args, **kwargs):
 
 ### 在OSX上安装时，我应该如何绕过 `-Wno-long-double error` ?
 
-**回答**: 
+**回答**: 对于在OSX上安装的Python来说有一个已知的问题。这和Cython无关，且你**每次**想要构建C扩展模块的时候都会遇到这个麻烦。
+
+这是最正常的解决方法： 进入Python提示栏，输入：
+
+```python
+>>> from distutils import sysconfig
+>>> sysconfig.get_makefile_filename()
+```
+
+这会输出 'Makefile' 的完整路径，用任何文本编译器打开这个文件并删除任何'-Wno-long-double' 标识即可。
+
+<hr>
+
+### 当在Windows上使用MinGW时，我应该如何绕过 “unable to find vcvarsall.bat” 这个错误？
+
+**回答**: 这个错误意味着Python没法在系统上找到C ++编译器。正常来说，这是由distutils来管理的，但是有可能它不是最新版本的。例如，你可能在 setup.py中是这么用的：
+
+```python
+from distutils.core import setup
+from distutils.extension import Extension
+```
+
+相反，你可以尝试载入setuptools，它给distutils打猴子补丁来找到vcvarsall.bat。（译者注：用setuptools就行，别再用distutils了）
+
+```python
+try:
+    from setuptools import setup
+    from setuptools import Extension
+except ImportError:
+    from distutils.core import setup
+   from distutils.extension import Extension
+```
+
+在IPython中，你可以这么引入setuptools：
+
+```python
+# First cell:
+    import setuptools
+            %load_ext Cython
+
+# Second cell:
+    %%cython -a
+    import cython
+    cimport cython
+
+    cdef int alpha = 255
+    print alpha
+```
+
+如果这不成功，你可以尝试下面这种绕过的方法。
+
+如果没有引入python库，那么对编译器增加这个语句
+
+```sh
+--compiler=mingw32
+```
+
+因此，这一行代码应该像这样：
+
+```sh
+python pyprog.py build_ext --compiler=mingw32 --inplace
+```
+
+这在使用pyximport方法时候没有解决问题。或者，你可以打下面的补丁。
+
+> 注意： **这个方法没有经过测试**
+
+打开 pyximport/pyxbuild.py 文件，在恰当的地方增加四行用"+"标记的代码。
+
+最后，如果这也没效果，你可以创建一个pydistutils.cfg 文件并写上内容：
+
+```configuration
+[build_ext]
+compiler=mingw32
+```
+
+把这个文件存到home目录，在命令提示里可以这么输入来找到：
+
+```python
+import os
+os.path.expanduser('~')
+```
+
+<hr>
+
+## 解释类问题
+
+### `.pxd` 和 `.pxi` 文件的区别是什么？分别在什么时候使用？
+
+**简短的回答**: 你总是应该对声明使用 .pxd文件，对你需要include的代码使用 .pxi文件。
+
+**中等长度回答**: .pxd文件是声明列表， .pxi文件是以文本的方式直接引用的，因此使用它们来声明是一个在.pxd文件存在之前比较常使用的历史遗留做法。
+
+**完整的回答**: .pxd文件是一个声明文件，（比如在写C扩展模块时）用来声明类、方法等，通常在一个同名的.pyx文件中实现。它只能包含声明、不能包含可执行的语句。你可以像在Python中import一样从 `.pxd` 文件中 `cimport` 。从同一个.pxd文件中cimport的两个不同的模块会收到同样的对象。
+
+.pxi文件时一个include引用文件，会以文本的方式引用（和C的 `#include` 指令类似）并可能包含任何在Cython引用时有效的Cython代码。它可能包含会被复制进多个文件的实现（常见的比如内联函数）。比如，这意味着如果我在 .pxi文件中声明了一个A类，且 b.pyx和c.pyx都 `include a.pxi` 那么我会有两个完全一样的类 b.A 和c.A。C库都接口通常在 .pxi文件中声明（因为它们和某个特定的模块没关系）。在每次调用时都会重新解析。
+
+注意你可以使用 `cimport *`，没必要对于外部定义使用 .pxi 文件。
+
+<hr>
+
+### 哪种更好？ 一个大的模块还是多个分开的模块？
+
+**回答**: 简单来说，一个大的模块处理起来太臃肿，但是对于C编译器而言会允许更深度的优化。
+
+对于多个分开的模块而言，编译器时间是可能会下降的，因为允许并行编译。自从Python3.5起，distuls中的"build_ext"这个命令有一个"-j"选项。而且C编译器编译较小的模块也会更快，因为一些优化措施的会涉及非线性的额外开销。
+
+分布版本的大小和每个模块的小，应该会增加。因为将一个模块分为几个小模块总有一些Cython必须要复制到每个字模块中的东西。目前有一个想避免这一点的[特性请求](https://github.com/cython/cython/issues/2356)。
+
+模块间的C调用会比模块内的C调用要慢一些，只是因为C编译器无法在模块间优化。你必须使用共享的 .pxd文件，然后通过函数指针来调用。如果模块对职能进行了划分，那么这么做的影响就不会太大。此时创建一个共享的 .pxd文件或者是 .pxi文件来写内联函数给多个模块中执行速度要求很高的模块代码仍然是一个好主意。
+
+当你拆分模块的时候，你也需要处理API变化。把遗留的引入代码留着，或者把一个模块变为通过imports将包内容合并，可能会防止你原来模块的用户，在你在多个模块间移动、并重新分配名称时，出现代码崩坏。
+
+<hr>
+
+### `PyObject*` 和 `Object` 的区别是什么？
+
+**回答**: `PyObject*` 类型的变量是一个指针，就像 `void*` 。它不会被引用计数，有时候也称为借用引用。一个 `Object` 变量是个Python对象的自有引用。这两者之间，你可以这么转换：
+
+```python
+from cpython.ref cimport PyObject
+
+py_object = [1,2,3]
+
+cdef PyObject* ptr = <PyObject*>py_object
+
+cdef object l = <object>ptr    # this increases the reference count to the list
+```
+
+注意：**这个对象的生命周期只受限于它的自由引用，而不受限于任何指向它的C指针**。这意味着上面案例的 `ptr` 会在该目标的最后一个引用死亡时变得无效。
+
+```python
+py_object = [1,2,3]
+cdef PyObject* ptr = <PyObject*>py_object
+py_object = None   # last reference to list dies here
+
+# ptr now points to a dead object
+print(<object>ptr)   # expect a crash here!
+```
+
+在将对象用C回调函数传递时很常用，比如:
+
+```python
+cdef int call_it_from_c(void* py_function, void* args):
+    py_args = <tuple>args if args is not NULL else ()
+    return (<object>py_function)(*py_args)
+
+def py_func(a,b,c):
+    print(a,b,c)
+    return -1
+
+args = [1,2,3]
+
+call_it_from_c(<PyObject*>py_func, <PyObject*>args)
+```
+
+再说一次，在任何对象指针还在使用的时候，你需要自己负责保证该对象还活着。
+
+<hr>
+
+### 为什么Cython并不总对没有初始化的变量报错？
+
+**回答**: Cython会在变量被使用前，在编译的时候做一些静态类型检查。但是这些检查非常基础，因为Cython无法确定运行时刻的代码路径。
+
+考虑下面的场景：
+
+```python
+def testUnboundedLocal1():
+   if False:
+      c = 1
+   print c
+def testUnboundedLocal2():
+   print c
+```
+
+对于CPython来说，两个函数都会导致下面的结果：
+
+```python
+NameError: global name 'c' is not defined
+```
+
+对于Cython来说，第一个变体会打印 None, 第二个变体在编译的时候报编译错误。这两者的行为都和CPython不同。
+
+这被认为是一个BUG，未来的版本会解决这个问题。
+
+<hr>
+
+### 为什么一个用cdef定义参数的函数可以接受None？
+
+**回答**: 对于Python来说，使用 `None` 来表示 没有值、或者无效值是一个很常见的做法。但是这和C无关，因为None并不与任何C类型兼容。为了处理这一点，默认的行为是对于用cdef定义了参数类型的函数会接受None。这个行为是从Pyrex继承的，同时它也正在被提议要修改。至少目前为了保留向后兼容性，这个行为会被保留。
+
+关于如何在代码中处理 `None` 你有四个选择：
+
+1. 在Cython3.X中，使用Python的类型注解而不是Cython的语法。Python的类型注解会区分 `func(x: MyType)` 和 `func(x: Optional[MyType])` -- 第一个函数**禁止**None，第二个函数显式的允许None。`func(x: MyType = None)` 也允许使用None，因为None在这里作为默认值。
+
+2. 如果你希望将 None 作为无效输入，你需要编写专门的检查它的代码，然后引发一个恰当的异常。
+
+3. 如果你希望Cython在None被传递给扩展类型的参数时引发异常，你可以使用 `not None` 声明。
+
+```python
+def foo(MyClass val not None): <...>
+```
+
+相当于下面代码的简写：
+
+```python
+def foo(MyClass val):
+    if val is None: raise <...>
+    <...>
+```
+
+4. 你还可以在你的文件的顶部写 `#cython: nonecheck=True`, 那么所有的访问都会被检查是否为None。但是这会拖慢代码，因为在每次访问时都会加上一个检查而不是尽在函数调用的时候检查一次。
+
+译者注：总之就是，要么你自己检查，要么你写指令让Cython帮你写检查的代码。
+
+<hr>
+
+## 关于这个项目
+
+### Cython是Python的一个实现版本吗？
+
+**回答**: 不是。你可以编译几乎所有的Python代码，因此和一个真实的Python实现版本相当接近。结果取决于实际运行的CPython （我们认为这是一个主要的兼容性优势）。无论如何，Cython的官方目标都是能够编译正常的Python代码、执行大多数Python的测试 - 且以CPython快的多的速度。
+
+### Cython比Python快吗？
+
+**回答**: 大多数情况下，是。举例来说，一个Cython编译的pybench总体来说快30%，在一些类似于 `if-elif-else` 或者是 `for` 循环的结构体中快60%到90%。我们运行运行CPython标准测试用例的测试（包含 Django模版、2to3、计算标准和其他应用），且大多数情况下，即时没有任何修改、没有添加任何静态类型，性能也能提升 20% - 60%。
+
+然而，Cython的主要优点是它可以很好的规模化、在规模化场景下速度表现甚至更好。对于严重依赖内置类型（比如：列表、字典、字符串）的代码，Cython经常可以对处理循环体进行指数级的提速。对于计算代码而言，和CPython相比100倍到1000倍的提速也很正常，且通常只需要给关键部分的代码增加静态类型声明即可 -- 牺牲Python的动态类型换取速度。由于你可以以任何粒度在代码中这么做，Cython使得写足够快的Python代码变得可能，只要使用静态类型来调整你的代码正确的5%关键部分就可以达到最大的速度。
+
+<hr>
+
+### Cython支持Python的哪些版本？
+
+**回答**: 从Cython0.21版本起，支持的版本是2.6、2.7和3.4+，Python2.6由于缺乏测试能力正在被淘汰。Cython3.0完全移除了对Python2.6的支持，因此需求Python2.7或者Python3.4+。在Cython3.1版本中计划移除Python2.7的支持，那是会要求使用Python3.6或者更高版本。
+
+Cython生成的C代码在所有支持的Python版本中都能构建和移植。，所以支持的CPython发布系列都会被常规性的测试。新的CPython版本通常是在它们发布前就已经测试过了。
+
+Cython编译的源代码可以使用Python2和Python3语法，在Cython0.X版本中默认是Python2，在Cython3及之后的版本中默认是Python3。当在Python2模式下编译Cython模块时（.pyx文件），大多数Python3语法特性只要不和Python2语法交互（Python2.7）则默认可用，但是总体语法还是Python2定义的那样。当编译Python模块时（.py文件），特殊的Cython语法（例如 `cdef` 关键字）不可用。可以给编译器提供语言级别选项、并设置为3或者"-3"，或者也可以在模块文件的顶部中这么写（通常是任何代码或者空行之前的第一行注释）：
+
+```python
+# cython: language_level=3
+```
+
+在Cython3.X中，编译Python2的代码要求提供选项 `-2` 或者 使用编译器指令 `language_level=2` 。默认情况下，Cython3.0使用Python3语义，因此 `print` 是一个函数，列表推导式的循环变量在外部不可见，等等。这相当于设置 `language_level=3str` 或者是选项 `--3str` 。如果你写的是 `language_level=3` ,那么没有加前缀的字符串字面量总是unicode字符串。
+
+译者注: 3str相较于3而言，主要是保留对Python2字符串的一定兼容，详细可以了解[Unicode 和传递字符串](docs/15.md#) 这个文档.
+
+### Cython输出的许可是什么？（license）
+
+**回答**: 你可以任意使用 Cython/Pyrex的输出内容（用你喜欢的许可方式 - BSD, public domain, GPL, all rights reserved， 什么都行）
+
+更多的细节：Python的许可和GCC使用的GPL是不同的。比如，GCC要求对它的输出内容增加特殊的意外子句 -- 因为它和GCC的库部分链接，比如对于AGL软件，会触发GPL的限制。
+
+Cython并不会这么做，根据Python许可，链接到Python不受限制。因此输出内容属于用户，不涉及任何权利和限制。
+
+另外，Pyrex/Cython在邮件列表写的所有版本的拥有者是可以把Python/Cython输出内容想怎么用就怎么用的人。
+
+### 我应该如何在学术论文中引用Cython？
+
+**回答**: 如果你提及Cython，最简单的说引用方法是在脚注上写我们网站的地址。你也可以选择用更正式的方法引用我们软件项目，像这样：
+
+```cite
+R. Bradshaw, S. Behnel, D. S. Seljebotn, G. Ewing, et al., The Cython compiler, http://cython.org.
+```
+
+(作者名称的列表是从setup.py中取的)。
+
+如果要写更正式的引用，这里有一个[Cython的期刊论文](https://www.computer.org/csdl/magazine/cs/2011/02/mcs2011020031/13rRUx0Pqtw%7Cjournalpaper)。如果你想引用，这里是Bibtex：
+
+```Bibtex
+@ARTICLE{ behnel2010cython,
+    author={Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.},
+    journal={Computing in Science Engineering},
+    title={Cython: The Best of Both Worlds},
+    year={2011},
+    month=march-april ,
+    volume={13},
+    number={2},
+    pages={31 -39},
+    keywords={Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;},
+    doi={10.1109/MCSE.2010.118},
+    ISSN={1521-9615},
+}
+```
+
+### Cython和Pyrex的关系是？
+
+**回答**: Cython一开始是基于之前一个叫Pyrex的项目开发的 -- 主要开发人 Greg Ewing.
+
+几年后，Pyrex的开发停滞了，同时Cython还坚持增加新的特性、支持新版本的Python。
+
+到2023年，Pyrex只具有历史价值了。
