--- a/docs/8.md
+++ b/docs/8.md
@@ -127,12 +127,12 @@ $ python setup.py build_ext --inplace
  def primes(int nb_primes):
     cdef int n, i, len_p
     cdef int p[1000]
-    if nb_primes &gt; 1000:
+    if nb_primes > 1000:
         nb_primes = 1000
 
     len_p = 0  # The current number of elements in p.
     n = 2
-    while len_p &lt; nb_primes:
+    while len_p < nb_primes:
         # Is n prime?
         for i in p[:len_p]:
             if n % i == 0:
@@ -330,7 +330,7 @@ def primes(unsigned int nb_primes):
     p.reserve(nb_primes)  # allocate memory for 'nb_primes' elements.
 
     n = 2
-    while p.size() &lt; nb_primes:  # size() for vectors is similar to len()
+    while p.size() < nb_primes:  # size() for vectors is similar to len()
         for i in p:
             if n % i == 0:
                 break
